--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -50,6 +50,31 @@
             const hiddenInput = document.getElementById('quantidade-hidden-' + id.split('-')[1]);
             hiddenInput.value = input.value;
         }
+        // JavaScript para abrir o modal
+        function abrirModal(imagemUrl) {
+            var modal = document.getElementById("imagemModal");
+            var modalImg = document.getElementById("imagemModalHD");
+            modal.style.display = "block";
+            modalImg.src = imagemUrl;
+        }
+
+        // JavaScript para fechar o modal
+        function fecharModal() {
+                var modal = document.getElementById("imagemModal");
+                modal.style.display = "none";
+            }
+            document.addEventListener("keydown", function (event) {
+            if (event.key === "Escape") {
+                fecharModal();
+            }
+        });
+        // Adicionar um event listener ao fundo escuro do modal
+        var fundoModal = document.getElementById("imagemModal");
+        fundoModal.addEventListener("click", function (event) {
+            if (event.target === fundoModal) {
+                fecharModal();
+            }
+        });
 
     </script>
 </head>
@@ -81,6 +106,11 @@
         {% endif %}
         <!-- Conteúdo da Frente de Loja -->
         <div class="cupcake-list">
+            <!-- Modal pop-up para a imagem grande -->
+            <div id="imagemModal" class="modal">
+              <span class="fechar-modal" onclick="fecharModal()">&times;</span>
+              <img class="modal-conteudo" id="imagemModalHD">
+            </div>
             <h1>Cupcakes Disponíveis</h1>
             <ul class="cupcake-items">
                 {% for cupcake in cupcakes %}
@@ -110,6 +140,5 @@
                 {% endfor %}
             </ul>
         </div>
-    </div>
 </body>
 </html>
