--- a/templates/admin_add_product.html
+++ b/templates/admin_add_product.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adicionar Novo Produto</title>
     <link rel="stylesheet" href="../static/admin_add_product.css">
+    <link rel="stylesheet" href="../static/mediaSmartphone.css">
 </head>
 <body>
     <div class="container">
