--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -6,6 +6,7 @@
     <title>Painel de Administração</title>
     <!-- Adicione links para seus arquivos CSS e Font Awesome aqui -->
     <link rel="stylesheet" href="../static/admin_dashboard.css">
+    <link rel="stylesheet" href="../static/mediaSmartphone.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 <body>
