--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -6,6 +6,7 @@
     <title>Painel de Controle</title>
     <!-- Link para o arquivo CSS externo -->
     <link rel="stylesheet" href="{{ url_for('static', filename='dashboard.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='mediaSmartphone.css') }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
