--- a/templates/edit_profile.html
+++ b/templates/edit_profile.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Editar Perfil</title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='edit_profile.css') }}">
+    <link rel="stylesheet" href="../static/mediaSmartphone.css">
 </head>
 <body>
     <div class="container">
