--- a/templates/login.html
+++ b/templates/login.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - KupKaKez</title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='login.css') }}">
+    <link rel="stylesheet" href="../static/mediaSmartphone.css">
     <style>
     </style>
     <script>
