--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -84,6 +84,9 @@
         <h1 class="welcome-message">Bem-vindo, {{ usuario[1] }}!</h1>
         <div class="header-icons">
             <!-- Ícones no cabeçalho -->
+            <a href="/listar_pedidos">
+                <i class="fas fa-star"></i> Avaliar Pedidos
+            </a>
             <a href="/edit_profile" class="icon-link edit-profile-link" title="Editar perfil">
                 <i class="fas fa-user icon-user"></i>
             </a>
