--- a/templates/login.html
+++ b/templates/login.html
@@ -78,6 +78,7 @@
                 <button type="submit" class="login-button">Entrar</button>
             </form>
             <p>Ainda não tem uma conta? <a href="/register" class="register-link">Registre-se</a></p>
+            <!--<p>Criar DB <a href="/create_db" class="register-link">Cria DB</a></p> -->
         </main>
          {% with messages = get_flashed_messages(with_categories=true) %}
             {% if messages %}
