--- a/static/edit_profile.css
+++ b/static/edit_profile.css
@@ -18,6 +18,7 @@ h1 {
     font-size: 24px;
     margin-bottom: 20px;
     text-align: center;
+    color: #333; /* Melhore a legibilidade definindo uma cor de texto */
 }
 
 /* Estilos para o formulário */
@@ -29,6 +30,7 @@ label {
     display: block;
     font-weight: bold;
     margin-bottom: 5px;
+    color: #333; /* Melhore a legibilidade definindo uma cor de texto */
 }
 
 .form-field {
@@ -38,13 +40,15 @@ label {
     border: 1px solid #ccc;
     border-radius: 5px;
     font-size: 16px;
+    color: #333; /* Melhore a legibilidade definindo uma cor de texto */
 }
 
 /* Estilos para os botões */
 .register-button,
 .action-button {
     display: inline-block;
-    padding: 10px 20px;
+    padding: 12px 24px; /* Espaçamento interno uniforme */
+    margin: 0 10px; /* Espaçamento simétrico direita/esquerda */
     background-color: #007bff;
     color: #fff;
     text-decoration: none;
@@ -52,13 +56,16 @@ label {
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    transition: background-color 0.3s;
+    transition: background-color 0.3s, box-shadow 0.3s; /* Adicione transições suaves */
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1); /* Adicione uma leve sombra */
 }
 
 .register-button:hover,
 .action-button:hover {
     background-color: #0056b3; /* Cor de fundo quando o mouse passa por cima */
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); /* Aumente a sombra no hover */
 }
+
 
 /* Estilos para a mensagem de sucesso */
 .success-message {
@@ -66,6 +73,8 @@ label {
     color: #fff;
     padding: 10px;
     margin-top: 20px;
+    text-align: center; /* Centralize o texto */
+    border-radius: 5px;
 }
 
 /* Estilos para dispositivos móveis */
