--- a/static/avaliar_pedidos.css
+++ b/static/avaliar_pedidos.css
@@ -232,7 +232,7 @@ th {
 
 /* Estilo para a estrela quando está ativa */
 .star.active {
-    background-image: url('https://www.pngarea.com/pngm/101/1103975_gold-star-png-mario-clipart-gold-star-transparent.png'); /* Use sua imagem de estrela preenchida ou ícone preenchido */
+    background-image: url('https://th.bing.com/th/id/OIP._MlGs1SfLXP1zvaSYJMWCgHaH3?pid=ImgDet&rs=1'); /* Use sua imagem de estrela preenchida ou ícone preenchido */
 }
 
 /* Estilo para o formulário */
@@ -286,5 +286,29 @@ input[type="submit"]:hover {
     justify-content: center;
     align-items: center;
     height: auto; /* Altura total da viewport */
+}
+
+/* Estilos para pedidos não avaliados */
+.nao-avaliado {
+    border: 2px solid red; /* Borda vermelha sólida para pedidos não avaliados */
+    background-color: #ffe6e6; /* Fundo vermelho claro para pedidos não avaliados */
+    padding: 10px; /* Espaçamento interno para a caixa */
+    margin: 10px; /* Espaçamento externo ao redor da caixa */
+    display: inline-block; /* Torna as caixas exibidas em linha */
+    border-radius: 5px; /* Borda arredondada para suavizar cantos */
+    font-weight: bold; /* Texto em negrito */
+    color: #ff0000; /* Cor do texto vermelho */
+}
+
+/* Estilos para pedidos avaliados */
+.avaliado {
+    border: 2px solid green; /* Borda verde sólida para pedidos avaliados */
+    background-color: #e6ffec; /* Fundo verde claro para pedidos avaliados */
+    padding: 10px; /* Espaçamento interno para a caixa */
+    margin: 10px; /* Espaçamento externo ao redor da caixa */
+    display: inline-block; /* Torna as caixas exibidas em linha */
+    border-radius: 5px; /* Borda arredondada para suavizar cantos */
+    font-weight: bold; /* Texto em negrito */
+    color: #008000; /* Cor do texto verde */
 }
 
