--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -21,7 +21,7 @@
             <h2>Gerenciar Produtos</h2>
             <ul>
                 <li><a href="/admin/add_product">Adicionar Produto</a></li>
-                <li><a href="/admin/edit_product">Editar Produto</a></li>
+                <li><a href="/admin_list_producto">Editar Produto</a></li>
                 <li><a href="/admin/delete_product">Excluir Produto</a></li>
             </ul>
         </div>
