--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -10,10 +10,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
-        // Funções JavaScript aqui...
-    </script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script>
         // Função para fechar a caixa de diálogo de erro
         function closeErrorDialog() {
             var errorDialog = document.querySelector('.error-dialog');
@@ -22,17 +18,6 @@
             // Ocultar a caixa de diálogo e a sobreposição
             errorDialog.style.display = 'none';
             overlay.style.display = 'none';
-        }
-        function abrirModal(imagemUrl) {
-            var modal = document.getElementById("imagemModal");
-            var modalImg = document.getElementById("imagemModalHD");
-            modal.style.display = "block";
-            modalImg.src = imagemUrl;
-        }
-
-        function fecharModal() {
-            var modal = document.getElementById("imagemModal");
-            modal.style.display = "none";
         }
         function incrementQuantity(id) {
             const input = document.getElementById(id);
@@ -57,6 +42,7 @@
             var modalImg = document.getElementById("imagemModalHD");
             modal.style.display = "block";
             modalImg.src = imagemUrl;
+            modalImg.classList.add("modal-img"); // Aplica a classe para centralizar a imagem
         }
 
         // JavaScript para fechar o modal
@@ -101,6 +87,7 @@
         <!-- Adicione o link de recuperação de senha -->
         <!--<a href="/reset_password_request" class="reset-password-link">Esqueceu sua senha? Clique aqui para recuperá-la.</a>-->
         <!-- Exiba as mensagens de sucesso -->
+    <div class="content">
         {% if messages %}
             <ul class="flash-messages">
                 {% for message in messages %}
@@ -116,8 +103,9 @@
               <img class="modal-conteudo" id="imagemModalHD">
             </div>
             <h1>Cupcakes Disponíveis</h1>
-            <ul class="cupcake-items">
-                {% for cupcake in cupcakes %}
+        <ul class="cupcake-items">
+            {% for cupcake in cupcakes %}
+                {% if cupcake['disponivel'] %}
                     <li class="cupcake-item">
                         <div class="cupcake-image">
                             <img src="{{ cupcake['imagem_url'] }}" alt="{{ cupcake['nome'] }}" onclick="abrirModal('{{ cupcake['imagem_url'] }}')">
@@ -141,8 +129,28 @@
                             </form>
                         </div>
                     </li>
+                {% endif %}
+            {% endfor %}
+        </ul>
+
+            <h1>Cupcakes Indisponíveis</h1>
+            <ul class="cupcake-items">
+                {% for cupcake in cupcakes %}
+                    {% if not cupcake['disponivel'] %}
+                        <li class="cupcake-item unavailable">
+                            <div class="cupcake-image">
+                                <img src="{{ cupcake['imagem_url'] }}" alt="{{ cupcake['nome'] }}" onclick="abrirModal('{{ cupcake['imagem_url'] }}')">
+                            </div>
+                            <div class="cupcake-info">
+                                <h2 class="cupcake-name">{{ cupcake['nome'] }}</h2>
+                                <p class="cupcake-description">{{ cupcake['descricao'] }}</p>
+                                <p class="cupcake-price">Preço: R$ {{ cupcake['preco'] }}</p>
+                            </div>
+                        </li>
+                    {% endif %}
                 {% endfor %}
             </ul>
         </div>
+    </div>
 </body>
 </html>
