--- a/templates/register.html
+++ b/templates/register.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro</title>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
+    <link rel="stylesheet" href="../static/registrar.css">
     <link rel="stylesheet" href="../static/mediaSmartphone.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/imask/6.0.7/imask.min.js"></script>
 </head>
 <body>
     <div class="container">
@@ -17,12 +18,14 @@
             <label for="email">Email:</label>
             <input type="email" id="email" name="email" class="form-field" required>
 
-
             <label for="telefone">Telefone:</label>
             <input type="telefone" id="telefone" name="telefone" class="form-field">
 
             <label for="senha">Senha:</label>
             <input type="password" id="senha" name="senha" class="form-field" required>
+
+            <label for="confirmar_senha">Confirmar Senha:</label>
+            <input type="password" id="confirmar_senha" name="confirmar_senha" class="form-field" required>
 
             <button type="submit" class="register-button">Registrar</button>
         </form>
@@ -49,6 +52,14 @@
             var errorMessage = document.querySelector('.error-message');
             errorMessage.style.display = 'none';
         }, 5000); // 5000 milissegundos (5 segundos)
+
+        document.addEventListener("DOMContentLoaded", function() {
+            var telefoneInput = document.getElementById("telefone");
+
+            var telefoneMask = IMask(telefoneInput, {
+                mask: '(00) 00000-0000'  // Defina a máscara como desejar
+            });
+        });
     </script>
 </body>
 </html>
