--- a/templates/login.html
+++ b/templates/login.html
@@ -6,6 +6,11 @@
     <title>Login - KupKaKez</title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='login.css') }}">
     <link rel="stylesheet" href="../static/mediaSmartphone.css">
+    <!-- CSS do Bootstrap (link para o CDN) -->
+    <!-- JavaScript do Bootstrap (JQuery é necessário) e Popper.js -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <style>
     </style>
     <script>
