--- a/templates/register.html
+++ b/templates/register.html
@@ -18,6 +18,9 @@
             <label for="email">Email:</label>
             <input type="email" id="email" name="email" class="form-field" required>
 
+            <label for="endereco">Endereço:</label>
+            <input type="text" id="endereco" name="endereco" class="form-field" required>
+
             <label for="telefone">Telefone:</label>
             <input type="telefone" id="telefone" name="telefone" class="form-field">
 
